# Mandelbrot_set_CUDA

./: CMakeLists.txt  README.md  mandel.cu  window.h
